--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,6 @@ body {
 
 .presentacion {
   flex: 1;
-  /* Ocupa el espacio restante */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,6 +89,15 @@ body {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  font-size: 2rem;
+  margin-bottom: 15px;
+}
+
+.presentacion__subtitulo {
+  font-size: 1.5rem;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: var(--fuente-montserrat);
 }
 
 .presentacion__contenido__titulo {
@@ -107,7 +115,17 @@ body {
   font-size: 1.5rem;
   font-family: var(--fuente-montserrat);
   line-height: 1.6;
+  margin-bottom: 15px;
   flex: auto;
+}
+
+.presentacion__lista {
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.presentacion__lista li {
+  margin-bottom: 10px;
 }
 
 /* Enlaces */
